set(
	SGE_SYSTEMS_FILES
	libs/systems/include/sge/systems/audio_loader.hpp
	libs/systems/include/sge/systems/audio_loader_fwd.hpp
	libs/systems/include/sge/systems/audio_player.hpp
	libs/systems/include/sge/systems/audio_player_default.hpp
	libs/systems/include/sge/systems/audio_player_fwd.hpp
	libs/systems/include/sge/systems/config.hpp
	libs/systems/include/sge/systems/config_fwd.hpp
	libs/systems/include/sge/systems/cursor_demuxer.hpp
	libs/systems/include/sge/systems/cursor_demuxer_fwd.hpp
	libs/systems/include/sge/systems/cursor_hotspot.hpp
	libs/systems/include/sge/systems/cursor_hotspot_fwd.hpp
	libs/systems/include/sge/systems/cursor_option.hpp
	libs/systems/include/sge/systems/cursor_option_field.hpp
	libs/systems/include/sge/systems/cursor_option_field_fwd.hpp
	libs/systems/include/sge/systems/cursor_option_fwd.hpp
	libs/systems/include/sge/systems/custom_cursor.hpp
	libs/systems/include/sge/systems/custom_cursor_fwd.hpp
	libs/systems/include/sge/systems/detail/add_defaults.hpp
	libs/systems/include/sge/systems/detail/any.hpp
	libs/systems/include/sge/systems/detail/any_fwd.hpp
	libs/systems/include/sge/systems/detail/any_key.hpp
	libs/systems/include/sge/systems/detail/any_key_fwd.hpp
	libs/systems/include/sge/systems/detail/any_map.hpp
	libs/systems/include/sge/systems/detail/assert_dependencies.hpp
	libs/systems/include/sge/systems/detail/assert_dependencies_one.hpp
	libs/systems/include/sge/systems/detail/custom_cursor_fwd.hpp
	libs/systems/include/sge/systems/detail/extract_needs_init.hpp
	libs/systems/include/sge/systems/detail/extract_parameter_type.hpp
	libs/systems/include/sge/systems/detail/has_input_option.hpp
	libs/systems/include/sge/systems/detail/has_with_audio_loader.hpp
	libs/systems/include/sge/systems/detail/has_with_audio_player.hpp
	libs/systems/include/sge/systems/detail/has_with_font.hpp
	libs/systems/include/sge/systems/detail/has_with_image2d.hpp
	libs/systems/include/sge/systems/detail/has_with_input.hpp
	libs/systems/include/sge/systems/detail/has_with_renderer.hpp
	libs/systems/include/sge/systems/detail/has_with_window.hpp
	libs/systems/include/sge/systems/detail/input.hpp
	libs/systems/include/sge/systems/detail/input_fwd.hpp
	libs/systems/include/sge/systems/detail/input_option.hpp
	libs/systems/include/sge/systems/detail/instance.hpp
	libs/systems/include/sge/systems/detail/instance_impl_fwd.hpp
	libs/systems/include/sge/systems/detail/is_with_input.hpp
	libs/systems/include/sge/systems/detail/is_with_renderer.hpp
	libs/systems/include/sge/systems/detail/list.hpp
	libs/systems/include/sge/systems/detail/list_fwd.hpp
	libs/systems/include/sge/systems/detail/make_list.hpp
	libs/systems/include/sge/systems/detail/make_list_visitor.hpp
	libs/systems/include/sge/systems/detail/quit_on_escape.hpp
	libs/systems/include/sge/systems/detail/renderer.hpp
	libs/systems/include/sge/systems/detail/renderer_caps.hpp
	libs/systems/include/sge/systems/detail/renderer_fwd.hpp
	libs/systems/include/sge/systems/empty_list.hpp
	libs/systems/include/sge/systems/empty_list_fwd.hpp
	libs/systems/include/sge/systems/exception.hpp
	libs/systems/include/sge/systems/focus_collector.hpp
	libs/systems/include/sge/systems/focus_collector_fwd.hpp
	libs/systems/include/sge/systems/font.hpp
	libs/systems/include/sge/systems/font_fwd.hpp
	libs/systems/include/sge/systems/image2d.hpp
	libs/systems/include/sge/systems/image2d_fwd.hpp
	libs/systems/include/sge/systems/input.hpp
	libs/systems/include/sge/systems/input_fwd.hpp
	libs/systems/include/sge/systems/instance.hpp
	libs/systems/include/sge/systems/instance_decl.hpp
	libs/systems/include/sge/systems/instance_fwd.hpp
	libs/systems/include/sge/systems/instance_impl.hpp
	libs/systems/include/sge/systems/keyboard_collector.hpp
	libs/systems/include/sge/systems/keyboard_collector_fwd.hpp
	libs/systems/include/sge/systems/list.hpp
	libs/systems/include/sge/systems/list_decl.hpp
	libs/systems/include/sge/systems/list_fwd.hpp
	libs/systems/include/sge/systems/list_impl.hpp
	libs/systems/include/sge/systems/log_location.hpp
	libs/systems/include/sge/systems/log_redirect_path.hpp
	libs/systems/include/sge/systems/log_settings.hpp
	libs/systems/include/sge/systems/log_settings_fwd.hpp
	libs/systems/include/sge/systems/make_empty_list.hpp
	libs/systems/include/sge/systems/make_list.hpp
	libs/systems/include/sge/systems/mouse_collector.hpp
	libs/systems/include/sge/systems/mouse_collector_fwd.hpp
	libs/systems/include/sge/systems/optional_log_redirect_path.hpp
	libs/systems/include/sge/systems/optional_log_redirect_path_fwd.hpp
	libs/systems/include/sge/systems/optional_log_settings.hpp
	libs/systems/include/sge/systems/optional_log_settings_fwd.hpp
	libs/systems/include/sge/systems/optional_name.hpp
	libs/systems/include/sge/systems/optional_name_fwd.hpp
	libs/systems/include/sge/systems/optional_plugin_path.hpp
	libs/systems/include/sge/systems/optional_plugin_path_fwd.hpp
	libs/systems/include/sge/systems/original_window.hpp
	libs/systems/include/sge/systems/original_window_fwd.hpp
	libs/systems/include/sge/systems/plugin_path.hpp
	libs/systems/include/sge/systems/quit_on_escape.hpp
	libs/systems/include/sge/systems/renderer.hpp
	libs/systems/include/sge/systems/renderer_caps.hpp
	libs/systems/include/sge/systems/renderer_caps_fwd.hpp
	libs/systems/include/sge/systems/renderer_fwd.hpp
	libs/systems/include/sge/systems/window.hpp
	libs/systems/include/sge/systems/window_fwd.hpp
	libs/systems/include/sge/systems/window_source.hpp
	libs/systems/include/sge/systems/window_source_fwd.hpp
	libs/systems/include/sge/systems/with_audio_loader.hpp
	libs/systems/include/sge/systems/with_audio_loader_fwd.hpp
	libs/systems/include/sge/systems/with_audio_player.hpp
	libs/systems/include/sge/systems/with_audio_player_fwd.hpp
	libs/systems/include/sge/systems/with_font.hpp
	libs/systems/include/sge/systems/with_font_fwd.hpp
	libs/systems/include/sge/systems/with_image2d.hpp
	libs/systems/include/sge/systems/with_image2d_fwd.hpp
	libs/systems/include/sge/systems/with_input.hpp
	libs/systems/include/sge/systems/with_input_fwd.hpp
	libs/systems/include/sge/systems/with_renderer.hpp
	libs/systems/include/sge/systems/with_renderer_fwd.hpp
	libs/systems/include/sge/systems/with_window.hpp
	libs/systems/include/sge/systems/with_window_fwd.hpp
	libs/systems/include/sge/systems/wrapped_window.hpp
	libs/systems/include/sge/systems/wrapped_window_fwd.hpp
	libs/systems/src/systems/any_visitor.cpp
	libs/systems/src/systems/audio_loader.cpp
	libs/systems/src/systems/audio_player.cpp
	libs/systems/src/systems/audio_player_default.cpp
	libs/systems/src/systems/config.cpp
	libs/systems/src/systems/custom_cursor.cpp
	libs/systems/src/systems/detail/custom_cursor.cpp
	libs/systems/src/systems/detail/input.cpp
	libs/systems/src/systems/detail/instance.cpp
	libs/systems/src/systems/detail/instance_impl.cpp
	libs/systems/src/systems/detail/list.cpp
	libs/systems/src/systems/detail/quit_on_escape.cpp
	libs/systems/src/systems/detail/renderer.cpp
	libs/systems/src/systems/exception.cpp
	libs/systems/src/systems/extract_config.cpp
	libs/systems/src/systems/extract_plugin_path.cpp
	libs/systems/src/systems/font.cpp
	libs/systems/src/systems/image2d.cpp
	libs/systems/src/systems/include/sge/src/systems/any_visitor.hpp
	libs/systems/src/systems/include/sge/src/systems/detail/custom_cursor.hpp
	libs/systems/src/systems/include/sge/src/systems/detail/instance_impl.hpp
	libs/systems/src/systems/include/sge/src/systems/extract_config.hpp
	libs/systems/src/systems/include/sge/src/systems/extract_plugin_path.hpp
	libs/systems/src/systems/include/sge/src/systems/find_plugin.hpp
	libs/systems/src/systems/include/sge/src/systems/find_plugin_opt.hpp
	libs/systems/src/systems/include/sge/src/systems/ini_section_name.hpp
	libs/systems/src/systems/include/sge/src/systems/logger.hpp
	libs/systems/src/systems/include/sge/src/systems/make_any_key.hpp
	libs/systems/src/systems/include/sge/src/systems/make_scoped_output.hpp
	libs/systems/src/systems/include/sge/src/systems/merge_config_strings.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/audio/find_player_plugin.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/audio/loader.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/audio/loader_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/audio/loader_unique_ptr.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/audio/player.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/audio/player_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/audio/player_pair.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/audio/player_pair_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/audio/player_unique_ptr.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/font/find_plugin.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/font/object.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/font/object_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/font/object_unique_ptr.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/image2d/object.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/image2d/object_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/image2d/object_unique_ptr.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/input/cursor_modifier.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/input/cursor_modifier_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/input/cursor_modifier_unique_ptr.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/input/object.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/input/object_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/input/object_unique_ptr.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/renderer/create_device.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/renderer/device.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/renderer/device_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/renderer/device_unique_ptr.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/renderer/find_plugin.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/renderer/optional_system_ref.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/renderer/optional_system_ref_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/renderer/plugin_core_pair.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/renderer/plugin_core_pair_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/renderer/system.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/renderer/system_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/renderer/system_unique_ptr.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/base.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/base_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/base_unique_ptr.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/make_base.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/make_system_base.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/object.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/object_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/object_unique_ptr.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/original.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/original_system.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/quit.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/quit_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/system.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/system_base.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/system_base_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/system_base_unique_ptr.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/system_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/system_unique_ptr.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/to_awl_parameters.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/wrapped.hpp
	libs/systems/src/systems/include/sge/src/systems/modules/window/wrapped_system.hpp
	libs/systems/src/systems/include/sge/src/systems/plugin_pair_decl.hpp
	libs/systems/src/systems/include/sge/src/systems/plugin_pair_fwd.hpp
	libs/systems/src/systems/include/sge/src/systems/plugin_pair_impl.hpp
	libs/systems/src/systems/include/sge/src/systems/unpack_if_present.hpp
	libs/systems/src/systems/ini_section_name.cpp
	libs/systems/src/systems/input.cpp
	libs/systems/src/systems/log_location.cpp
	libs/systems/src/systems/log_settings.cpp
	libs/systems/src/systems/logger.cpp
	libs/systems/src/systems/make_any_key.cpp
	libs/systems/src/systems/make_empty_list.cpp
	libs/systems/src/systems/make_scoped_output.cpp
	libs/systems/src/systems/merge_config_strings.cpp
	libs/systems/src/systems/modules/audio/find_player_plugin.cpp
	libs/systems/src/systems/modules/audio/loader.cpp
	libs/systems/src/systems/modules/audio/player.cpp
	libs/systems/src/systems/modules/audio/player_pair.cpp
	libs/systems/src/systems/modules/font/find_plugin.cpp
	libs/systems/src/systems/modules/font/object.cpp
	libs/systems/src/systems/modules/image2d/object.cpp
	libs/systems/src/systems/modules/input/cursor_modifier.cpp
	libs/systems/src/systems/modules/input/object.cpp
	libs/systems/src/systems/modules/renderer/create_device.cpp
	libs/systems/src/systems/modules/renderer/device.cpp
	libs/systems/src/systems/modules/renderer/find_plugin.cpp
	libs/systems/src/systems/modules/renderer/plugin_core_pair.cpp
	libs/systems/src/systems/modules/renderer/system.cpp
	libs/systems/src/systems/modules/window/base.cpp
	libs/systems/src/systems/modules/window/make_base.cpp
	libs/systems/src/systems/modules/window/make_system_base.cpp
	libs/systems/src/systems/modules/window/object.cpp
	libs/systems/src/systems/modules/window/original.cpp
	libs/systems/src/systems/modules/window/original_system.cpp
	libs/systems/src/systems/modules/window/quit.cpp
	libs/systems/src/systems/modules/window/system.cpp
	libs/systems/src/systems/modules/window/system_base.cpp
	libs/systems/src/systems/modules/window/to_awl_parameters.cpp
	libs/systems/src/systems/modules/window/wrapped.cpp
	libs/systems/src/systems/modules/window/wrapped_system.cpp
	libs/systems/src/systems/original_window.cpp
	libs/systems/src/systems/renderer.cpp
	libs/systems/src/systems/window.cpp
	libs/systems/src/systems/wrapped_window.cpp
)

find_package(
	awl
	REQUIRED
)

add_sge_base_library(
	systems
	SGE_DEPS
		sgeaudio
		sgeconfig
		sgecore
		sgefont
		sgeimage2d
		sgeinput
		sgelog
		sgemedia
		sgeparse
		sgeparseini
		sgeplugin
		sgerenderer
		sgesprite
		sgetexture
		sgeviewport
		sgewindow
	TRANSITIVE_SGE_DEPS
		sgeaudio_interface
		sgecore_interface
		sgefont_interface
		sgeimage2d_interface
		sgeinput_interface
		sgelog_interface
		sgemedia_interface
		sgeplugin_interface
		sgerenderer_interface
		sgetexture_interface
		sgeviewport_interface
		sgewindow_interface
	ADDITIONAL_DEPS
		${awl_TARGET}
		${fcppt_log_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
	TRANSITIVE_ADDITIONAL_DEPS
		awl_interface
	INCLUDE_DIRS
		"${CMAKE_CURRENT_SOURCE_DIR}/src/systems/include"
)
